--- a/style.css
+++ b/style.css
@@ -8,6 +8,17 @@ body {
       width: 200px;
       height: 300px;
   }
+
+      .footer {
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        background-color:greenyellow;
+        color: rgb(56, 13, 26);
+        text-align: center;
+        font-size: large;
+      } 
   
   .kollazs{
     width:400px;
