--- a/evszakok.css
+++ b/evszakok.css
@@ -16,6 +16,18 @@ img:hover{
     display: flex;
     justify-content: center;
 }
+
+      .footer {
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        background-color:greenyellow;
+        color: rgb(56, 13, 26);
+        text-align: center;
+        font-size: large;
+      } 
+
 p{
     text-align: center;
     font-family: 'Architects Daughter', cursive;
